apply plugin: 'com.android.application'

android {
    signingConfigs {
    }
    compileSdk 36
    useLibrary 'org.apache.http.legacy'

    defaultConfig {
        applicationId "org.a5calls.android.a5calls"
        minSdkVersion 23
        targetSdkVersion 36
        versionCode 74
        versionName '2.3.16'
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
        signingConfig signingConfigs.debug
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    namespace 'org.a5calls.android.a5calls'
    lint {
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
    buildFeatures {
        buildConfig = true
        viewBinding = true
    }
    testOptions {
        unitTests {
            includeAndroidResources = true
        }
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    // Testing
    androidTestImplementation 'androidx.test:core:1.6.1'
    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
        exclude group: 'com.android.support', module: 'support-annotations'
    })
    testImplementation 'androidx.test.ext:junit:1.2.1'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.robolectric:robolectric:4.14.1'

    // AndroidX
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.browser:browser:1.8.0'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.core:core-ktx:1.16.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.preference:preference:1.2.1'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'

    // Material Components
    implementation 'com.google.android.material:material:1.12.0'

    // Firebase
    implementation platform('com.google.firebase:firebase-bom:33.9.0')
    implementation 'com.google.firebase:firebase-auth'

    // Markwon
    implementation 'io.noties.markwon:core:4.6.2'
    implementation 'io.noties.markwon:ext-strikethrough:4.6.2'
    implementation 'io.noties.markwon:simple-ext:4.6.2'

    // Volley
    implementation 'com.android.volley:volley:1.2.1'
    implementation 'com.google.code.gson:gson:2.12.1'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'

    // Glide
    implementation 'com.github.bumptech.glide:glide:4.16.0'

    // Play Store Review
    implementation 'com.google.android.play:review:2.0.2'

    // Charts
    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
    implementation 'com.jjoe64:graphview:4.2.2'

    // OneSignal
    implementation 'com.onesignal:OneSignal:5.1.28'

    // Plausible
    implementation 'com.github.OneBusAway:plausible-android-sdk:3.3'

    // If you add any other open-source libraries, make sure to update assets/licenses.html
    // with the appropriate license information.
}

apply plugin: 'com.google.gms.google-services'
apply plugin: 'org.jetbrains.kotlin.android'

// Configure Kotlin compilation options
tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
    kotlinOptions {
        jvmTarget = '21'
    }
}
